--- a/index.html
+++ b/index.html
@@ -25,9 +25,97 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
+
+  <style>
+  /* Container styling */
+#testimonialCarousel {
+  background: #fff;
+  border-radius: 20px;
+  box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
+  padding: 40px 20px;
+  max-width: 900px;
+  margin: 50px auto;
+  height: 250px; /* ✅ FIXED HEIGHT */
+  overflow: hidden; /* prevents text overflow */
+}
+
+
+  /* Layout styling */
+  .testimonial-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    flex-wrap: wrap;
+  }
+
+  .testimonial-img {
+    flex: 0 0 15%;
+    max-width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 4px solid #eee;
+  }
+
+  .testimonial-text {
+    flex: 1;
+    text-align: left;
+  }
+
+  .testimonial-text p {
+    font-style: italic;
+    color: #444;
+  }
+
+  .testimonial-text h3 {
+    margin-top: 10px;
+    font-weight: 600;
+    color: #222;
+  }
+
+  .testimonial-text h4 {
+    font-size: 0.9rem;
+    color: #777;
+  }
+
+  /* Controls spacing */
+  .carousel-control-prev,
+  .carousel-control-next {
+    width: 5%;
+  }
+
+  .carousel-control-prev {
+    left: -50px;
+  }
+
+  .carousel-control-next {
+    right: -50px;
+  }
+
+  /* Responsive adjustments */
+  @media (max-width: 768px) {
+    .testimonial-content {
+      flex-direction: row;
+      text-align: center;
+    }
+    .testimonial-img {
+      flex: none;
+      margin-bottom: 15px;
+    }
+    .carousel-control-prev,
+    .carousel-control-next {
+      left: 0;
+      right: 0;
+      width: 10%;
+    }
+  }
+</style>
 
 </head>
 
@@ -89,11 +177,11 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" class="">
+      <img src="assets/img/hero-bg.png" alt="" data-aos="fade-in" class="">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Kumar Vishal</h2>
-        <p>I'm <span class="typed" data-typed-items="Data Scientist, Web Developer, Freelancer, Data Analyst, Designer"> .... </span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+        <p>I'm <span class="typed" data-typed-items="Data Scientist, Web Developer, Freelancer, Data Analyst, Designer"> Data Scientist / Web Developer </span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
 
     </section><!-- /Hero Section -->
@@ -118,7 +206,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/my-profile-img2.png" class="img-fluid card shadow card-img-top" alt="">
+            <img src="assets/img/my-profile-img2.jpg" class="img-fluid card shadow card-img-top" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2>UI/UX Designer &amp; Web Developer.</h2>
@@ -211,51 +299,67 @@ Creative problem-solver with a knack for teamwork, fueled by a love for painting
 
         <div class="row skills-content skills-animation">
 
-          <div class="col-lg-6">
+          <div class="col-lg-4">
 
             <div class="progress">
               <span class="skill"><span>HTML</span> <i class="val">100%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress">
+                <div class="progress-bar progress-bar-striped bg-info" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
             <div class="progress">
               <span class="skill"><span>CSS</span> <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar progress-bar-striped bg-info" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
             <div class="progress">
               <span class="skill"><span>JavaScript</span> <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar progress-bar-striped bg-info" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
           </div>
 
-          <div class="col-lg-6">
+          <div class="col-lg-4">
 
             <div class="progress">
-              <span class="skill"><span>JAVA</span> <i class="val">80%</i></span>
+              <span class="skill"><span>JAVA</span> <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar progress-bar-striped bg-info" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
             <div class="progress">
-              <span class="skill"><span>WordPress/CMS</span> <i class="val">90%</i></span>
+              <span class="skill"><span>WordPress/CMS</span> <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar progress-bar-striped bg-info" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
             <div class="progress">
               <span class="skill"><span>Photoshop</span> <i class="val">55%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar progress-bar-striped bg-info" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Skills Item -->
+
+            <div class="col-lg-4">
+
+            <div class="progress">
+              <span class="skill"><span>DBMS/SQL</span> <i class="val">80%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar progress-bar-striped bg-info" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Skills Item -->
+
+            <div class="progress">
+              <span class="skill"><span>PYTHON/FLASK</span> <i class="val">85%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar progress-bar-striped bg-info" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
@@ -613,106 +717,106 @@ Creative problem-solver with a knack for teamwork, fueled by a love for painting
         <p>Hear directly from the businesses and founders, how I've helped my clients to find solutions and transform complex data challenges into fully functional, profitable web applications.</p>
       </div><!-- End Section Title -->
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
+      <!-- Testimonials Section -->
+<!-- Testimonials Carousel -->
+<div id="testimonialCarousel" class="carousel carousel-dark slide" data-bs-ride="carousel">
 
-        <div class="swiper init-swiper">
-          <script type="application/json" class="swiper-config">
-            {
-              "loop": true,
-              "speed": 600,
-              "autoplay": {
-                "delay": 5000
-              },
-              "slidesPerView": "auto",
-              "pagination": {
-                "el": ".swiper-pagination",
-                "type": "bullets",
-                "clickable": true
-              },
-              "breakpoints": {
-                "320": {
-                  "slidesPerView": 1,
-                  "spaceBetween": 40
-                },
-                "1200": {
-                  "slidesPerView": 3,
-                  "spaceBetween": 1
-                }
-              }
-            }
-          </script>
-          <div class="swiper-wrapper">
+  <!-- Indicators -->
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#testimonialCarousel" data-bs-slide-to="0" class="active" aria-current="true"></button>
+    <button type="button" data-bs-target="#testimonialCarousel" data-bs-slide-to="1"></button>
+    <button type="button" data-bs-target="#testimonialCarousel" data-bs-slide-to="2"></button>
+    <button type="button" data-bs-target="#testimonialCarousel" data-bs-slide-to="3"></button>
+    <button type="button" data-bs-target="#testimonialCarousel" data-bs-slide-to="4"></button>
+  </div>
 
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <p>
-                  <i class="bi bi-quote quote-icon-left"></i>
-                  <span>We needed a prototype and deploy a real-time ML model. Vishal built Python/Flask infrastructure for us. He turned it into a reliable, functional application that our users interact with daily. A true end-to-end solution.</span>
-                  <i class="bi bi-quote quote-icon-right"></i>
-                </p>
-                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>- Murli K.</h3>
-                <h4>CTO &amp; FinTech Startup</h4>
-              </div>
-            </div><!-- End testimonial item -->
+  <!-- Carousel Items -->
+  <div class="carousel-inner">
 
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <p>
-                  <i class="bi bi-quote quote-icon-left"></i>
-                  <span>As a designer, I focus on the visual experience. I needed a developer who could bring my complex interfaces to life with a solid, secure backend. He seamlessly translated my UI/UX vision into a reliable.</span>
-                  <i class="bi bi-quote quote-icon-right"></i>
-                </p>
-                <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Sarah W.</h3>
-                <h4>Designer</h4>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <p>
-                  <i class="bi bi-quote quote-icon-left"></i>
-                  <span>We had repetitive of data processes, So we need automation using Python and Bash. He grasped our workflow and delivered efficient, low-maintenance solutions to focus on higher-value tasks.</span>
-                  <i class="bi bi-quote quote-icon-right"></i>
-                </p>
-                <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Akshit Soni</h3>
-                <h4>Store Owner</h4>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <p>
-                  <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Vishal's data science background was invaluable. He didn't just crunch numbers; he helped us in KPIs, built a predictive model, and presented the findings in a clear way. He truly transform data into business strategy.</span>
-                  <i class="bi bi-quote quote-icon-right"></i>
-                </p>
-                <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                <h3>Jena Sodi</h3>
-                <h4>Freelancer</h4>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <p>
-                  <i class="bi bi-quote quote-icon-left"></i>
-                  <span>I needed a partner, not just a contractor. His TEAM took my business idea for analysis and a web platform, and delivered solution. He handled everything. It saved me months.</span>
-                  <i class="bi bi-quote quote-icon-right"></i>
-                </p>
-                <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                <h3>Rishikesh J.</h3>
-                <h4>Entrepreneur</h4>
-              </div>
-            </div><!-- End testimonial item -->
-
-          </div>
-          <div class="swiper-pagination"></div>
+    <!-- Slide 1 -->
+    <div class="carousel-item active" data-bs-interval="4000">
+      <div class="testimonial-content">
+        <img src="assets/img/testimonials/testimonials-1.jpg" alt="" class="testimonial-img">
+        <div class="testimonial-text">
+          <p><i class="bi bi-quote quote-icon-left"></i>
+            We needed a prototype and deploy a real-time ML model. Vishal built Python/Flask infrastructure for us. He turned it into a reliable, functional application that our users interact with daily. A true end-to-end solution.
+            <i class="bi bi-quote quote-icon-right"></i></p>
+          <h3>- Murli K.</h3>
+          <h4>CTO &amp; FinTech Startup</h4>
         </div>
-
       </div>
+    </div>
+
+    <!-- Slide 2 -->
+    <div class="carousel-item" data-bs-interval="4000">
+      <div class="testimonial-content">
+        <img src="assets/img/testimonials/testimonials-2.jpg" alt="" class="testimonial-img">
+        <div class="testimonial-text">
+          <p><i class="bi bi-quote quote-icon-left"></i>
+            As a designer, I focus on the visual experience. I needed a developer who could bring my complex interfaces to life with a solid, secure backend. He seamlessly translated my UI/UX vision into a reliable product.
+            <i class="bi bi-quote quote-icon-right"></i></p>
+          <h3>Sarah W.</h3>
+          <h4>Designer</h4>
+        </div>
+      </div>
+    </div>
+
+    <!-- Slide 3 -->
+    <div class="carousel-item" data-bs-interval="4000">
+      <div class="testimonial-content">
+        <img src="assets/img/testimonials/testimonials-3.jpg" alt="" class="testimonial-img">
+        <div class="testimonial-text">
+          <p><i class="bi bi-quote quote-icon-left"></i>
+            We had repetitive data processes, so we needed automation using Python and Bash. He grasped our workflow and delivered efficient, low-maintenance solutions to focus on higher-value tasks.
+            <i class="bi bi-quote quote-icon-right"></i></p>
+          <h3>Akshit Soni</h3>
+          <h4>Store Owner</h4>
+        </div>
+      </div>
+    </div>
+
+    <!-- Slide 4 -->
+    <div class="carousel-item" data-bs-interval="4000">
+      <div class="testimonial-content">
+        <img src="assets/img/testimonials/testimonials-4.jpg" alt="" class="testimonial-img">
+        <div class="testimonial-text">
+          <p><i class="bi bi-quote quote-icon-left"></i>
+            Vishal's data science background was invaluable. He didn't just crunch numbers; he helped us define KPIs, built a predictive model, and presented the findings clearly. He truly transforms data into strategy.
+            <i class="bi bi-quote quote-icon-right"></i></p>
+          <h3>Jena Sodi</h3>
+          <h4>Freelancer</h4>
+        </div>
+      </div>
+    </div>
+
+    <!-- Slide 5 -->
+    <div class="carousel-item" data-bs-interval="4000">
+      <div class="testimonial-content">
+        <img src="assets/img/testimonials/testimonials-5.jpg" alt="" class="testimonial-img">
+        <div class="testimonial-text">
+          <p><i class="bi bi-quote quote-icon-left"></i>
+            I needed a partner, not just a contractor. His team took my business idea for analysis and a web platform, and delivered the full solution. It saved me months.
+            <i class="bi bi-quote quote-icon-right"></i></p>
+          <h3>Rishikesh J.</h3>
+          <h4>Entrepreneur</h4>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <!-- Controls -->
+  <button class="carousel-control-prev" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+
+  <button class="carousel-control-next" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
 
     </section><!-- /Testimonials Section -->
 
