--- a/index.html
+++ b/index.html
@@ -290,35 +290,35 @@ Creative problem-solver with a knack for teamwork, fueled by a love for painting
     <section id="skills" class="skills section light-background">
 
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
+      <div class="container section-title">
         <h2>Skills</h2>
         <p>Skilled in Python, Flask, Java, Bash, and web development—crafting clean, efficient solutions with strong debugging and UI/UX focus.</p>
       </div><!-- End Section Title -->
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
+      <div class="container">
 
-        <div class="row skills-content skills-animation">
+        <div class="row skills-content">
 
           <div class="col-lg-4">
 
             <div class="progress">
               <span class="skill"><span>HTML</span> <i class="val">100%</i></span>
-              <div class="progress">
-                <div class="progress-bar progress-bar-striped bg-info" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar progress-bar-striped bg-info" style="width: 100%;"></div>
               </div>
             </div><!-- End Skills Item -->
 
             <div class="progress">
               <span class="skill"><span>CSS</span> <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar progress-bar-striped bg-info" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar progress-bar-striped bg-info" style="width: 90%;"></div>
               </div>
             </div><!-- End Skills Item -->
 
             <div class="progress">
               <span class="skill"><span>JavaScript</span> <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar progress-bar-striped bg-info" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar progress-bar-striped bg-info" style="width: 75%;"></div>
               </div>
             </div><!-- End Skills Item -->
 
@@ -329,37 +329,39 @@ Creative problem-solver with a knack for teamwork, fueled by a love for painting
             <div class="progress">
               <span class="skill"><span>JAVA</span> <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar progress-bar-striped bg-info" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar progress-bar-striped bg-info" style="width: 60%;"></div>
               </div>
             </div><!-- End Skills Item -->
 
             <div class="progress">
               <span class="skill"><span>WordPress/CMS</span> <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar progress-bar-striped bg-info" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar progress-bar-striped bg-info" style="width: 85%;"></div>
               </div>
             </div><!-- End Skills Item -->
 
             <div class="progress">
               <span class="skill"><span>Photoshop</span> <i class="val">55%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar progress-bar-striped bg-info" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar progress-bar-striped bg-info" style="width: 55%;"></div>
               </div>
             </div><!-- End Skills Item -->
 
-            <div class="col-lg-4">
+          </div>
+
+          <div class="col-lg-4">
 
             <div class="progress">
               <span class="skill"><span>DBMS/SQL</span> <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar progress-bar-striped bg-info" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar progress-bar-striped bg-info" style="width: 80%;"></div>
               </div>
             </div><!-- End Skills Item -->
 
             <div class="progress">
               <span class="skill"><span>PYTHON/FLASK</span> <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar progress-bar-striped bg-info" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar progress-bar-striped bg-info" style="width: 85%;"></div>
               </div>
             </div><!-- End Skills Item -->
 
@@ -370,6 +372,7 @@ Creative problem-solver with a knack for teamwork, fueled by a love for painting
       </div>
 
     </section><!-- /Skills Section -->
+
 
     <!-- Resume Section -->
     <section id="resume" class="resume section">
@@ -424,33 +427,34 @@ Creative problem-solver with a knack for teamwork, fueled by a love for painting
 
           </div>
 
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+         <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
-            <div class="resume-item">
-              <!-- <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
-              <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
-              </ul> -->
-            </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <!-- <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Picker (Warehouse Associate)</h4>
+              <h5>Feb 2023 – Mar 2023</h5> (1-month)
+              <p><em>Carryfast Logistics Pvt. Ltd., Patna (Bihar)</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
-              </ul> -->
-            </div><!-- Edn Resume Item -->
+                <li>Handled inventory picking, packaging, and order dispatch operations.</li>
+                <li>Maintained accurate stock records and ensured timely delivery coordination.</li>
+                <li>Gained hands-on experience in warehouse logistics, team coordination, and workflow management.</li>
+              </ul>
+            </div><!-- End Resume Item -->
+
+            <div class="resume-item">
+              <h4>Data Entry Intern</h4>
+              <h5>May 2023 – July 2023</h5> (3-month)
+              <p><em>CA Firm, Patna</em></p>
+              <ul>
+                <li>Performed data entry and record management using <b>Excel</b>, <b>Tally</b>, and <b>ERP systems</b>.</li>
+                <li>Supported accounting operations by organizing client and transaction data.</li>
+                <li>Ensured accuracy and consistency of financial information across reports.</li>
+                <li>Learned the fundamentals of business data handling and financial documentation.</li>
+              </ul>
+            </div><!-- End Resume Item -->
 
           </div>
+
 
         </div>
 
