--- a/service-details.html
+++ b/service-details.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Service Details - iPortfolio Bootstrap Template</title>
+  <title>Timel1ne - Service_Details</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -12,6 +12,8 @@
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
+  <!-- Font-Awesome -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
@@ -23,20 +25,15 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: iPortfolio
-  * Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
-  * Updated: Jun 29 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body class="service-details-page">
+
 
   <header id="header" class="header dark-background d-flex flex-column">
     <i class="header-toggle d-xl-none bi bi-list"></i>
@@ -48,42 +45,25 @@
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
       <!-- Uncomment the line below if you also wish to use an image logo -->
       <!-- <img src="assets/img/logo.png" alt=""> -->
-      <h1 class="sitename">Alex Smith</h1>
+      <h1 class="sitename">Timel<span style="color:red; font-size: 35px;">1</span>ne</h1>
     </a>
 
     <div class="social-links text-center">
-      <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-      <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-      <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-      <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
-      <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      <a href="mailto:vishalkumar124team@gmail.com" class="twitter" target="_blank"><i class="bi bi-envelope"></i></a>
+      <a href="https://www.facebook.com/profile.php?id=100016426182369" class="facebook" target="_blank"><i class="bi bi-facebook"></i></a>
+      <a href="https://www.instagram.com/timel1ne.debug" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>
+ <!---     <a href="#" class="google-plus"><i class="bi bi-skype" target="_blank"></i></a>   ---->
+      <a href="https://www.linkedin.com/in/vishal-kumar-698a4920a" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
     </div>
 
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="#hero"><i class="bi bi-house navicon"></i>Home</a></li>
-        <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
-        <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
-        <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
-        <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
-        <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-          <ul>
-            <li><a href="#">Dropdown 1</a></li>
-            <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-              <ul>
-                <li><a href="#">Deep Dropdown 1</a></li>
-                <li><a href="#">Deep Dropdown 2</a></li>
-                <li><a href="#">Deep Dropdown 3</a></li>
-                <li><a href="#">Deep Dropdown 4</a></li>
-                <li><a href="#">Deep Dropdown 5</a></li>
-              </ul>
-            </li>
-            <li><a href="#">Dropdown 2</a></li>
-            <li><a href="#">Dropdown 3</a></li>
-            <li><a href="#">Dropdown 4</a></li>
-          </ul>
-        </li>
-        <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
+        <li><a href="index.html#hero" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
+        <li><a href="index.html#about"><i class="bi bi-person navicon"></i> About</a></li>
+        <li><a href="index.html#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
+        <li><a href="index.html#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
+        <li><a href="index.html#services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
+        <li><a href="index.html#contact"><i class="bi bi-envelope"></i> <span>Contact</span></a></li>
       </ul>
     </nav>
 
@@ -113,34 +93,71 @@
 
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="services-list">
-              <a href="#" class="active">Web Design</a>
-              <a href="#">Software Development</a>
-              <a href="#">Product Management</a>
-              <a href="#">Graphic Design</a>
-              <a href="#">Marketing</a>
+              <div class="service-box rounded-4 shadow-sm bg-light">
+                <ul class="list-unstyled">
+                  <li><i class="bi bi-chevron-right text-primary"></i> <a href="#" class="active">Web Automation (Python/Bash)</a></li>
+                  <li><i class="bi bi-chevron-right text-primary"></i> <a href="#">Data Analysis & Visualization</a></li>
+                  <li><i class="bi bi-chevron-right text-primary"></i> <a href="#">Machine Learning Models</a></li>
+                  <li><i class="bi bi-chevron-right text-primary"></i> <a href="#">UI/UX Design Integration</a></li>
+                  <li><i class="bi bi-chevron-right text-primary"></i> <a href="#">API Development</a></li>
+                  <li><i class="bi bi-chevron-right text-primary"></i> <a href="#">Marketing</a></li>
+                </ul>
+              </div>
             </div>
 
-            <h4>Enim qui eos rerum in delectus</h4>
-            <p>Nam voluptatem quasi numquam quas fugiat ex temporibus quo est. Quia aut quam quod facere ut non occaecati ut aut. Nesciunt mollitia illum tempore corrupti sed eum reiciendis. Maxime modi rerum.</p>
+            <h4>End-to-End Web Application Development</h4>
+            <p>I specialize in building dynamic, responsive, and data-driven web applications — from idea to deployment.
+              My focus is on crafting scalable solutions using modern technologies and clean UI/UX design.
+            </p>
+
+            <div class="service-box m-2 p-4 rounded-4 shadow-sm bg-light">
+              <h4 class="text-primary mb-3">Why Choose Me?</h4>
+              <ul class="list-unstyled">
+                <li><i class="bi bi-star-fill text-warning"></i> Focused on clean, optimized code</li>
+                <li><i class="bi bi-star-fill text-warning"></i> Experience with full-stack projects</li>
+                <li><i class="bi bi-star-fill text-warning"></i> Excellent debugging and documentation</li>
+              </ul>
+            </div>
+
           </div>
 
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
             <img src="assets/img/services.jpg" alt="" class="img-fluid services-img">
-            <h3>Temporibus et in vero dicta aut eius lidero plastis trand lined voluptas dolorem ut voluptas</h3>
-            <p>
-              Blanditiis voluptate odit ex error ea sed officiis deserunt. Cupiditate non consequatur et doloremque consequuntur. Accusantium labore reprehenderit error temporibus saepe perferendis fuga doloribus vero. Qui omnis quo sit. Dolorem architecto eum et quos deleniti officia qui.
-            </p>
+            <h4 class="mt-4">Key Highlights:</h4>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Aut eum totam accusantium voluptatem.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Assumenda et porro nisi nihil nesciunt voluptatibus.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea</span></li>
+              <li><i class="bi bi-check-circle text-primary"></i> Full-stack web development using <b>Python (Flask)</b> and <b>JavaScript</b>.</li>
+              <li><i class="bi bi-check-circle text-primary"></i> RESTful API integration and backend logic design.</li>
+              <li><i class="bi bi-check-circle text-primary"></i> Responsive front-end using Bootstrap and custom CSS.</li>
+              <li><i class="bi bi-check-circle text-primary"></i> Database handling using MySQL and SQLite.</li>
+              <li><i class="bi bi-check-circle text-primary"></i> Deployed on cloud or GitHub Pages for live use.</li>
             </ul>
-            <p>
-              Est reprehenderit voluptatem necessitatibus asperiores neque sed ea illo. Deleniti quam sequi optio iste veniam repellat odit. Aut pariatur itaque nesciunt fuga.
-            </p>
-            <p>
-              Sunt rem odit accusantium omnis perspiciatis officia. Laboriosam aut consequuntur recusandae mollitia doloremque est architecto cupiditate ullam. Quia est ut occaecati fuga. Distinctio ex repellendus eveniet velit sint quia sapiente cumque. Et ipsa perferendis ut nihil. Laboriosam vel voluptates tenetur nostrum. Eaque iusto cupiditate et totam et quia dolorum in. Sunt molestiae ipsum at consequatur vero. Architecto ut pariatur autem ad non cumque nesciunt qui maxime. Sunt eum quia impedit dolore alias explicabo ea.
-            </p>
+
+            <h5 class="mt-4">Tools & Technologies:</h5>
+            <div class="d-flex flex-wrap gap-2">
+              <span class="badge bg-info text-dark">Python</span>
+              <span class="badge bg-info text-dark">Flask</span>
+              <span class="badge bg-info text-dark">HTML5</span>
+              <span class="badge bg-info text-dark">CSS3</span>
+              <span class="badge bg-info text-dark">JavaScript</span>
+              <span class="badge bg-info text-dark">Bootstrap</span>
+              <span class="badge bg-info text-dark">MySQL</span>
+              <span class="badge bg-info text-dark">Git & GitHub</span>
+            </div>
+
+            <h5 class="mt-4">Workflow Overview:</h5>
+            <ol>
+              <li>Understanding project requirements and design goals.</li>
+              <li>Building the backend logic and database schema.</li>
+              <li>Designing a clean and responsive front-end layout.</li>
+              <li>Testing, debugging, and optimizing performance.</li>
+              <li>Deploying the final product on the preferred platform.</li>
+            </ol>
+
+            <div class="text-center mt-5">
+              <a href="index.html#contact" class="btn btn-primary rounded-pill px-4 py-2">
+                <i class="bi bi-envelope me-2"></i> Contact for Collaboration
+              </a>
+            </div>
           </div>
 
         </div>
@@ -151,18 +168,19 @@
 
   </main>
 
+   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer position-relative light-background">
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">iPortfolio</strong> <span>All Rights Reserved</span></p>
+        <p><i class="fas fa-copyright me-1"></i> 2026 <span>Copyright</span> | <strong class="px-1 sitename">Timel<span style="color:red;">1</span>ne</strong> <span> | All Rights Reserved</span></p>
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a href="https://themewagon.com">ThemeWagon</a>
+        <i class="fas fa-code me-1"></i>Made with <i class="fas fa-solid fa-cloud-bolt mx-1"></i> Determination.
+      </div>
+      <div class="social-links mt-1 text-center">
+          <a href="https://github.com/timel1ne" class="github"><i class="bi bi-github"></i></a>
+          <a href="https://linkedin.com/in/vishalkumar" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
     </div>
 
@@ -192,3 +210,5 @@
 </body>
 
 </html>
+
+
